--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,6 +20,7 @@ requirements:
   host:
     - python >=3.8
     - pip
+    - hatchling
   run:
     - python >=3.8
     - pymatgen
@@ -28,7 +29,6 @@ requirements:
     - prompt_toolkit
     - loguru
     - polars
-    - ruamel.yaml
 
 test:
   imports:
