--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,12 @@
 {% set name = "dspawpy" %}
-{% set version = "1.8.1" %}
-
+{% set version = "1.8.4" %}
 package:
   name: "{{ name|lower }}"
   version: "{{ version }}"
 
 source:
   url: "https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
-  sha256: 981669d54a3c0a03cb185de6e984ea8f7adc2d0667ac10d1256aa4069d8237f1
+  sha256: f1381266c63e77caf1523daf49cd4346b77a2e797de2fb5937f00935bd2cb4ca
 
 build:
   entry_points:
@@ -18,21 +17,21 @@ build:
 
 requirements:
   host:
-    - python >=3.8
+    - python >=3.9  # 注意：pyproject.toml 里是 >=3.9，不是 3.8
     - pip
     - hatchling
   run:
-    - python >=3.8
+    - python >=3.9
     - pymatgen
     - statsmodels
     - h5py
     - prompt_toolkit
     - loguru
-    - polars
-    - python-build
-    - hatchling
+    - polars >=0.18
     - h5glance
-    - pytables
+    - pytables  # 这是 conda 中 'tables' 的包名
+    - numpy <2
+    - ase
 
 test:
   imports:
@@ -54,7 +53,6 @@ about:
   license_file: LICENSE.txt
   summary: "Tools for dspaw"
   doc_url: http://hzwtech.com/Device%20Studio/DS-PAW/build/html/tools.html
-  dev_url: http://hzwtech.com/Device%20Studio/DS-PAW/build/htmldspawpy/latest/dspawpy.html
 
 extra:
   recipe-maintainers:
