--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,28 +1,28 @@
 {% set name = "dspawpy" %}
 {% set version = "1.8.4" %}
-{% set python_min = "3.9" %}
 
 package:
   name: "{{ name|lower }}"
   version: "{{ version }}"
 
 source:
-  url: "https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
+  url: "https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
   sha256: f1381266c63e77caf1523daf49cd4346b77a2e797de2fb5937f00935bd2cb4ca
 
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  skip: true
   entry_points:
     - dspawpy=dspawpy.cli.entrypoint:main
-    
+
 requirements:
   host:
-    - python >={{ python_min }}
+    - python
     - pip
     - hatchling
   run:
-    - python >={{ python_min }}
+    - python
     - pymatgen
     - statsmodels
     - h5py
@@ -46,15 +46,15 @@ test:
     - dspawpy --help
   requires:
     - pip
-    - python {{ python_min }}
 
 about:
-  home: http://www.hzwtech.com
+  home: http://www.hzwtech.com/
   license: MIT
   license_family: MIT
   license_file: LICENSE.txt
-  summary: "Tools for dspaw"
+  summary: Tools for dspaw
   doc_url: http://hzwtech.com/Device%20Studio/DS-PAW/build/html/tools.html
+  dev_url: http://hzwtech.com/Device%20Studio/DS-PAW/build/html/dspawpy/latest/dspawpy.html
 
 extra:
   recipe-maintainers:
