--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,17 +12,16 @@ source:
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
-  skip: true
   entry_points:
     - dspawpy=dspawpy.cli.entrypoint:main
 
 requirements:
   host:
-    - python
+    - python >=3.9,<3.13
     - pip
     - hatchling
   run:
-    - python
+    - python >=3.9,<3.13
     - pymatgen
     - statsmodels
     - h5py
